# dotorm

./: LICENSE  README.md  README_RU.md  app.py  builder.py  example.py  fields.py  model.py  orm.py  pyproject.toml  pytest.ini  test_dotorm.py  ttest_dotorm.py  ttest_ormar.py  ttest_pydantic.py  ttest_pypika.py  ttest_tortoise.py
.github/workflows/: publish.yml
benchmarks/: setup.sql
databases/: mysql_pool.py  mysql_session.py  mysql_transaction.py
dotorm/: __init__.py  builder.py  decorators.py  exceptions.py  fields.py  model.py  orm.py  utils.py
dotorm/builder/: builder.py  crud.py  crud_relashions.py  helpers.py  many2many.py  one2many.py  one2one.py  primary.py  protocol.py  relashions.py  request_builder.py  utils.py
dotorm/builder/mixins/: crud.py  m2m.py  relations.py
dotorm/components/: filter_parser.py
dotorm/databases/: mysql_session.py  mysql_transaction.py  sesson_abstract.py  types.py
dotorm/databases/abstract/: __init__.py  pool.py  session.py  types.py
dotorm/databases/clickhouse/: pool.py  session.py
dotorm/databases/mysql/: pool.py  session.py  transaction.py
dotorm/databases/postgres/: __init__.py  pool.py  session.py  transaction.py
dotorm/integrations/: pydantic.py
dotorm/orm/: many2many.py  model.py  primary.py  protocol.py  relashions.py
dotorm/orm/mixins/: ddl.py  many2many.py  primary.py  relations.py
tests/: test_dotorm.py
tests/integration/: models.py  test_orm.py
